--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header class="app-header">
     <div class="brand">
-      <div class="logo">MF</div>
+      <div class="logo">SR</div>
       <div>
         <div class="kicker">Plano de Treinos</div>
         <h1>Organizado e detalhado do jeito que você pediu</h1>
